MPL/test/MplPasses/TypeChecker/cases/kindcheck/negativehigherkindedtype/1.mpl
data 
    Test(A,B) -> C =
    Testt :: A,B -> C
    Testtt :: A(B) -> C
